--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,7 +38,8 @@ dependencies {
     // Kotlin 针对 JDK 7 或 JDK 8
     // implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     // implementation"org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     /* https://github.com/Kotlin/anko  学习文档https://juejin.im/entry/5a13ea795188252abc5dfcd8
       1.find()代替findViewById()
