//apply plugin: 'kotlin-kapt'   出错，把他注释掉

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,16 @@ apply plugin: 'com.android.application'
    followed by the com.android.application plugin:  */
 apply plugin: 'kotlin-android'
 //kotlin的apt 类似于java的apt
-apply plugin: 'kotlin-kapt'
+//apply plugin: 'kotlin-kapt'
 //扩展插件，使用可以直接引用布局里view的id进行操作
 apply plugin: 'kotlin-android-extensions'
 
 /* remove the below line
    apply plugin: 'me.tatarka.retrolambda' */
-kapt {
-    //使用kotlin语言配置
-    generateStubs = true
-}
+//kapt {
+//    //使用kotlin语言配置
+//    generateStubs = true
+//}
 android {
     // 编译SDK的版本
     compileSdkVersion 28
