--- a/kotlindialog/build.gradle
+++ b/kotlindialog/build.gradle
@@ -121,6 +121,8 @@ android {
 apply from: "dependencies.gradle"
 
 dependencies {
+    //默认加载包
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
